--- a/w4hw4/index.html
+++ b/w4hw4/index.html
@@ -1,1 +1,22 @@
 <h1>header1</h1>
+<!DOCTYPE html>
+<html>
+<body>
+<meta charset="utf-8">
+<h1>morning!</h1>
+
+<div style="background-color:#000814;">
+<p align="right"><font color="ffc300">bonjour<br>bonjour</font></p>
+</div>
+
+<div style="background-color:#001d3d;">
+<p align="center"><font color="ffc300">hello<br>hello</font></p>
+</div>
+
+<div style="background-color:#003566">
+<p><font color="ffc300">hola<br>hola</font></p>
+</div>
+
+<div style="background-color:#457b9d"><h3><font>巢狀標籤:先用div將這個區塊與其他區域分開處理，再把字變得和h3一樣大，最後透過font改變文字顏色</font></h3></div>
+</body>
+</html>
