--- a/fp.html
+++ b/fp.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>卡路里工作室</title>
+        <title>LOOKING FOR CALORIES</title>
         <link rel="stylesheet" href="style.css"/>
         <style>
             header{background: #e3d5ca;}
@@ -13,7 +13,7 @@
     </head>
     <body>
         <header>
-            <center><h2>卡路里工作室</h2></center>
+            <center><h2>LOOKING FOR CALORIES</h2></center>
         </header>
             <nav style="color:#99582a;">
                 <ul>
